Introduce multi-level caching with Redis and Caffeine integration. Implement cache invalidation mechanisms, configuration, and annotations for PriceService methods.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,6 @@ spring:
     create-schemas: true
     locations: classpath:db/migration
     baseline-on-migrate: true
+cache:
+  invalidate:
+    enabled: true
