--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -12,6 +12,10 @@ processors:
 exporters:
   logging:
     loglevel: info
+  prometheus:
+    endpoint: 0.0.0.0:8889
+    const_labels:
+      service: omno
 
 service:
   pipelines:
@@ -22,4 +26,4 @@ service:
     metrics:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging]
+      exporters: [logging, prometheus]
