Add validation, exception handling, and improved error responses for PriceService
- Add global exception handler for better error representation, including product not found and validation error handling.
- Enhance `PriceController` with `ResponseEntity` for structured responses.
- Introduce validation annotations in `AdjustmentDto` to enforce constraints.
- Replace generic exceptions in `PriceService` with a custom `ProductNotFoundException`.
- Adjust `AdminController` to validate incoming adjustment payloads.
- Fix `application.yml` datasource URL fallback syntax.
- Update dependencies to include Spring Boot validation starter.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     virtual:
       enabled: true
   datasource:
-    url: ${SPRING_DATASOURCE_URL:"jdbc:postgresql://postgres.omno.orb.local:5432/pricing"}
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://postgres.omno.orb.local:5432/pricing}
     username: ${SPRING_DATASOURCE_USERNAME:myuser}
     password: ${SPRING_DATASOURCE_PASSWORD:secret}
     driver-class-name: org.postgresql.Driver
