Refactor cache package structure; add CircuitBreaker for Redis caching and resilience configurations

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,17 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Resilience4j for Circuit Breaker (Spring Boot 3 integration) -->
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot3</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-circuitbreaker</artifactId>
+            <version>2.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
