--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,3 +6,7 @@ scrape_configs:
   - job_name: 'otel-collector'
     static_configs:
       - targets: ['otel-collector:8889']
+  - job_name: 'app'
+    metrics_path: /actuator/prometheus
+    static_configs:
+      - targets: ['app-svc:8080']
