--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -31,16 +31,24 @@ otel:
       protocol: http/protobuf
   logs:
     exporter: none
-  metrics:
-    exporter: otlp
   traces:
     exporter: otlp
 
 management:
   otlp:
-    metrics:
-      export:
-        # Micrometer OTLP metrics endpoint inside Docker network
-        url: http://otel-collector:4318/v1/metrics
     tracing:
       endpoint: http://otel-collector:4318/v1/traces
+  metrics:
+    distribution:
+      percentiles:
+        http:
+          server:
+            requests: 0.95,0.99
+      slo:
+        http:
+          server:
+            requests: 5ms,10ms,20ms,50ms,100ms,250ms,500ms,1s,2s,5s
+  prometheus:
+    metrics:
+      export:
+        enabled: true
