--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,7 +63,25 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics,env,configprops
+        include: health,info,metrics,env,configprops,prometheus
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
+      percentiles:
+        http:
+          server:
+            requests: 0.95,0.99
+      slo:
+        http:
+          server:
+            requests: 5ms,10ms,20ms,50ms,100ms,250ms,500ms,1s,2s,5s
+  prometheus:
+    metrics:
+      export:
+        enabled: true
   endpoint:
     health:
       show-details: when_authorized
@@ -75,9 +93,6 @@ management:
       enabled: true
 
   otlp:
-    metrics:
-      export:
-        url: http://otel-collector.omno.orb.local:4318/v1/metrics
     tracing:
       endpoint: http://otel-collector.omno.orb.local:4318/v1/traces
 
@@ -115,7 +130,5 @@ otel:
       protocol: http/protobuf
   logs:
     exporter: none
-  metrics:
-    exporter: otlp
   traces:
     exporter: otlp
